Citations updated for 2NN MEAM and KIM

--- a/Citation/10.1016_j.actamat.2007.08.041.bib
+++ b/Citation/10.1016_j.actamat.2007.08.041.bib
@@ -1,5 +1,5 @@
 @article{Lee_2007,
- abstract = {A modified embedded-atom method (MEAM) interatomic potential for the Fe-H binary system has been developed using previously developed MEAM potentials of Fe and H. The potential parameters were determined by fitting to experimental data on the dilute heat of solution of hydrogen in body-centered cubic (bcc) and face-centered cubic (fcc) Fe, the vacancy-hydrogen binding energy in bcc Fe, and to a first-principles calculation for the lattice parameter and bulk modulus of a hypothetical NaCl-type FeH. The potential accurately reproduces the known physical properties of hydrogen as an interstitial solute element in bcc and fcc Fe. The applicability of the potential to atomistic approaches for investigating interactions between hydrogen atoms and other defects such as vacancies, dislocations and grain boundaries, and also for investigating the effects of hydrogen on various deformation and mechanical behaviors of iron is demonstrated.},
+ abstract = {A modified embedded-atom method (MEAM) interatomic potential for the Fe–H binary system  has been developed using previously developed MEAM potentials of Fe and H. The potential parameters were determined by fitting to experimental data on the dilute heat of solution of hydrogen in body-centered cubic (bcc) and face-centered cubic (fcc) Fe,  the vacancy–hydrogen binding energy in bcc Fe, and to a first-principles calculation  for the lattice parameter and bulk modulus of a hypothetical NaCl-type FeH. The  potential accurately reproduces the known physical properties of hydrogen as an  interstitial solute element in bcc and fcc Fe. The applicability of the potential to atomistic approaches for investigating interactions between hydrogen atoms and  other defects such as vacancies, dislocations and grain boundaries, and also for  investigating the effects of hydrogen on various deformation and mechanical behaviors of iron is demonstrated.},
  author = {Byeong-Joo Lee and Je-Wook Jang},
  doi = {10.1016/j.actamat.2007.08.041},
  journal = {Acta Materialia},
@@ -7,7 +7,7 @@
  number = {20},
  pages = {6779--6788},
  publisher = {Elsevier BV},
- title = {A modified embedded-atom method interatomic potential for the Fe-H system},
+ title = {A modified embedded-atom method interatomic potential for the Fe–H system},
  url = {https://doi.org/10.1016%2Fj.actamat.2007.08.041},
  volume = {55},
  year = {2007}
