--- a/Citation/10.1016_j.calphad.2014.10.001.bib
+++ b/Citation/10.1016_j.calphad.2014.10.001.bib
@@ -1,12 +1,12 @@
 @article{Kim_2015,
- abstract = {Interatomic potentials for pure Ca and Mg-X (X=Y,Sn,Ca) binary systems have been developed on the basis of the second nearest-neighbor modified embedded-atom method (2NN MEAM) formalism. The potentials can describe various fundamental physical properties of pure Ca (bulk, defect and thermal properties) and the alloy behavior (structural, thermodynamic and defect properties of solid solutions and compounds) of binary systems in reasonable agreement with experimental data or first-principles and other calculations. The applicability of the developed potentials to atomistic investigations of the deformation behavior of Mg and its alloys is discussed together with some challenging points that need further attention.},
+ abstract = {Interatomic potentials for pure Ca and Mg–X (X=Y,Sn,Ca)binary systems have been  developed on the basis of the second nearest-neighbor modified embedded-atom  method (2NNMEAM) formalism.The potentials can describe various fundamental physical  properties of pure Ca (bulk,defect and thermal properties) and the alloy behavior (structural,thermodynamic and defect properties of solid solutions and compounds) of binary systems in reasonable agreement with experimental data or first-principles and other calculations.The applicability of the developed potentials to atomistic  investigations of the deformation behavior of Mg and its alloys is discussed together  with some challenging points that need further attention.},
  author = {Ki-Hyun Kim and Jong Bae Jeon and Byeong-Joo Lee},
  doi = {10.1016/j.calphad.2014.10.001},
  journal = {Calphad},
  month = {mar},
  pages = {27--34},
  publisher = {Elsevier BV},
- title = {Modified embedded-atom method interatomic potentials for Mg-X (X=Y, Sn, Ca) binary systems},
+ title = {Modified embedded-atom method interatomic potentials for Mg–X (X=Y, Sn, Ca) binary systems},
  url = {https://doi.org/10.1016%2Fj.calphad.2014.10.001},
  volume = {48},
  year = {2015}
