--- a/Citation/10.1016_j.calphad.2018.01.003.bib
+++ b/Citation/10.1016_j.calphad.2018.01.003.bib
@@ -1,5 +1,5 @@
 @article{Jang_2018,
- abstract = {Interatomic potentials for pure Zn and Mg-Zn binary system have been developed on the basis of the second nearest-neighbor modified embedded-atom method formalism. The potentials describe fundamental material properties of pure Zn (bulk, defect, and thermal properties) reasonably and reproduce the alloy behavior (thermodynamic, structural, and elastic properties of compounds and solution phases) of Mg-Zn alloys well in good agreement with experiments, first-principles and CALPHAD. The applicability of the developed potentials to atom-scale investigations on the slip behavior of Mg-Zn alloys is also demonstrated by showing that the calculated effects of Zn on the general stacking fault energy on the basal, prismatic and pyramidal planes are consistent with first-principles calculations.},
+ abstract = {Interatomic potentials for pure Zn and Mg–Zn binary system have been developed on the  basis of the second nearest-neighbor modified embedded-atom method formalism. The  potentials describe fundamental material properties of pure Zn (bulk, defect, and  thermal properties) reasonably and reproduce the alloy behavior (thermodynamic,  structural, and elastic properties of compounds and solution phases) of Mg-Zn alloys well in good agreement with experiments, first-principles and CALPHAD. The applicability of the developed potentials to atom-scale investigations on the slip behavior of  Mg-Zn alloys is also demonstrated by showing that the calculated effects of Zn on  the general stacking fault energy on the basal, prismatic and pyramidal planes are consistent with first-principles calculations.},
  author = {Hyo-Sun Jang and Kyeong-Min Kim and Byeong-Joo Lee},
  doi = {10.1016/j.calphad.2018.01.003},
  journal = {Calphad},
