--- a/Citation/10.1016_0039-6028(96)00801-1.bib
+++ b/Citation/10.1016_0039-6028(96)00801-1.bib
@@ -1,6 +1,6 @@
 @article{Stephenson_1996,
  abstract = {The widely used Stillinger-Weber potential for silicon interactions has been modified to provide an accurate description of the Si(111)-(7 × 7) surface including the highly reactive adatom and rest-atom sites. This modified potential also provides a good representation of bulk silicon, and the Si(001)-(1 × 1), Si(001)-(2 × 1), Si(111)-(1 × 1) and Si(111)-(2 × 1) surfaces. Above the melting temperature of 1683 K, however, the original Stillinger-Weber potential is probably superior.},
- author = {P.C.L Stephenson and M.W Radny and P.V Smith},
+ author = {P. C. L. Stephenson and M. W. Radny and P. V. Smith},
  doi = {10.1016/0039-6028(96)00801-1},
  journal = {Surface Science},
  month = {oct},
