concistency corrections between here and potentials.nist.gov

--- a/Citation/10.1016_j.actamat.2003.11.026.bib
+++ b/Citation/10.1016_j.actamat.2003.11.026.bib
@@ -1,5 +1,5 @@
 @article{Mishin_2004,
- abstract = {A new embedded-atom potential has been developed for Ni3Al by fitting to experimental and first-principles data. The potential describes lattice properties of Ni3Al, point defects, planar faults, as well as the γ and γ′ fields on the Ni–Al phase diagram. The potential is applied to calculate the energies of coherent Ni/Ni3Al interphase boundaries with three different crystallographic orientations. Depending on the orientation, the interface energy varies between 12 and 46 mJ/m2. Coherent γ/γ′ interfaces existing at high temperatures are shown to be more diffuse and are likely to have a lower energy than Ni/Ni3Al interfaces.},
+ abstract = {A new embedded-atom potential has been developed for Ni<sub>3</sub>Al by fitting to experimental and first-principles data. The potential describes lattice properties of Ni<sub>3</sub>Al, point defects, planar faults, as well as the γ and γ′ fields on the Ni–Al phase diagram. The potential is applied to calculate the energies of coherent Ni/Ni<sub>3</sub>Al interphase boundaries with three different crystallographic orientations. Depending on the orientation, the interface energy varies between 12 and 46 mJ/m2. Coherent γ/γ′ interfaces existing at high temperatures are shown to be more diffuse and are likely to have a lower energy than Ni/Ni<sub>3</sub>Al interfaces.},
  author = {Y. Mishin},
  doi = {10.1016/j.actamat.2003.11.026},
  journal = {Acta Materialia},
