--- a/Citation/10.1016_j.actamat.2008.03.027.bib
+++ b/Citation/10.1016_j.actamat.2008.03.027.bib
@@ -1,5 +1,5 @@
 @article{Kim_2008,
- abstract = {Modified embedded-atom method (MEAM) interatomic potentials for the Ti–C and Ti–N binary  systems have been developed using previously developed MEAM potentials of Ti, C and N.  The potential parameters were determined by fitting to experimental data on the enthalpy of formation, lattice parameter, elastic constants, thermal linear expansion  of NaCl-type TiC and TiN, and dilute heat of solution of carbon and nitrogen atoms in hexagonal close-packed Ti. The potentials can describe fundamental physical properties (structural, elastic, thermal and surface properties) of the alloys well, in good  agreement with experimental information or first-principles calculations. The applicability of the potentials to atomistic investigations of interactions between TiC or TiN precipitates and matrix, dislocations or other defects, and their effects  on deformation and mechanical behaviors of metallic alloys is discussed.},
+ abstract = {Modified embedded-atom method (MEAM) interatomic potentials for the Ti-C and Ti-N binary systems have been developed using previously developed MEAM potentials of Ti, C and N. The potential parameters were determined by fitting to experimental data on the enthalpy of formation, lattice parameter, elastic constants, thermal linear expansion of NaCl-type TiC and TiN, and dilute heat of solution of carbon and nitrogen atoms in hexagonal close-packed Ti. The potentials can describe fundamental physical properties (structural, elastic, thermal and surface properties) of the alloys well, in good agreement with experimental information or first-principles calculations. The applicability of the potentials to atomistic investigations of interactions between TiC or TiN precipitates and matrix, dislocations or other defects, and their effects on deformation and mechanical behaviors of metallic alloys is discussed.},
  author = {Young-Min Kim and Byeong-Joo Lee},
  doi = {10.1016/j.actamat.2008.03.027},
  journal = {Acta Materialia},
@@ -7,7 +7,7 @@
  number = {14},
  pages = {3481--3489},
  publisher = {Elsevier BV},
- title = {Modified embedded-atom method interatomic potentials for the Ti–C and Ti–N binary systems},
+ title = {Modified embedded-atom method interatomic potentials for the Ti-C and Ti-N binary systems},
  url = {https://doi.org/10.1016%2Fj.actamat.2008.03.027},
  volume = {56},
  year = {2008}
