--- a/Citation/10.1016_j.actamat.2008.09.031.bib
+++ b/Citation/10.1016_j.actamat.2008.09.031.bib
@@ -1,5 +1,5 @@
 @article{Kim_2009,
- abstract = {Modified embedded-atom method (MEAM) interatomic potentials for pure Mn and the Fe–Mn  binary system have been developed using a previously developed MEAM potential for Fe.  The potentials can describe various fundamental physical properties of pure Mn (cohesive energy, structural energy differences, lattice parameters, elastic constants, vacancy formation energy, surface energy, etc.) and alloy behaviors (enthalpy of mixing in face-centered cubic and liquid phases, composition dependency of lattice parameters in various solid solutions) in reasonable agreement with experimental information or  other empirical approaches. The applicability of the potential to atomistic investigations on a wide range of mechanical or deformation properties of the Fe–Mn alloys is demonstrated.},
+ abstract = {Modified embedded-atom method (MEAM) interatomic potentials for pure Mn and the Fe-Mn binary system have been developed using a previously developed MEAM potential for Fe. The potentials can describe various fundamental physical properties of pure Mn (cohesive energy, structural energy differences, lattice parameters, elastic constants, vacancy formation energy, surface energy, etc.) and alloy behaviors (enthalpy of mixing in face-centered cubic and liquid phases, composition dependency of lattice parameters in various solid solutions) in reasonable agreement with experimental information or other empirical approaches. The applicability of the potential to atomistic investigations on a wide range of mechanical or deformation properties of the Fe-Mn alloys is demonstrated.},
  author = {Young-Min Kim and Young-Han Shin and Byeong-Joo Lee},
  doi = {10.1016/j.actamat.2008.09.031},
  journal = {Acta Materialia},
@@ -7,7 +7,7 @@
  number = {2},
  pages = {474--482},
  publisher = {Elsevier BV},
- title = {Modified embedded-atom method interatomic potentials for pure Mn and the Fe–Mn system},
+ title = {Modified embedded-atom method interatomic potentials for pure Mn and the Fe-Mn system},
  url = {https://doi.org/10.1016%2Fj.actamat.2008.09.031},
  volume = {57},
  year = {2009}
