--- a/Citation/10.1016_j.actamat.2009.03.019.bib
+++ b/Citation/10.1016_j.actamat.2009.03.019.bib
@@ -1,5 +1,5 @@
 @article{Kim_2009,
- abstract = {Modified embedded-atom method (MEAM) interatomic potentials for the Fe–Ti–C and Fe–Ti–N ternary systems have been developed based on the previously developed MEAM potentials  for sub-unary and binary systems. An attempt was made to find a way to determine ternary potential parameters using the corresponding binary parameters. The calculated coherent interface properties, interfacial energy, work of separation and misfit strain energy  between body-centered cubic Fe and NaCl-type TiC or TiN were reasonable when compared  with relevant first-principles calculations under the same condition. The applicability  of the present potentials for atomistic simulations to investigate nucleation kinetics  of TiC or TiN precipitates and their effects on mechanical properties in steels is also demonstrated.},
+ abstract = {Modified embedded-atom method (MEAM) interatomic potentials for the Fe-Ti-C and Fe-Ti-N ternary systems have been developed based on the previously developed MEAM potentials for sub-unary and binary systems. An attempt was made to find a way to determine ternary potential parameters using the corresponding binary parameters. The calculated coherent interface properties, interfacial energy, work of separation and misfit strain energy between body-centered cubic Fe and NaCl-type TiC or TiN were reasonable when compared with relevant first-principles calculations under the same condition. The applicability of the present potentials for atomistic simulations to investigate nucleation kinetics of TiC or TiN precipitates and their effects on mechanical properties in steels is also demonstrated.},
  author = {Hyun-Kyu Kim and Woo-Sang Jung and Byeong-Joo Lee},
  doi = {10.1016/j.actamat.2009.03.019},
  journal = {Acta Materialia},
@@ -7,7 +7,7 @@
  number = {11},
  pages = {3140--3147},
  publisher = {Elsevier BV},
- title = {Modified embedded-atom method interatomic potentials for the Fe–Ti–C and Fe–Ti–N ternary systems},
+ title = {Modified embedded-atom method interatomic potentials for the Fe-Ti-C and Fe-Ti-N ternary systems},
  url = {https://doi.org/10.1016%2Fj.actamat.2009.03.019},
  volume = {57},
  year = {2009}
